# firsttracks

./: README.md  middleware.ts  next.config.js  package-lock.json  package.json  schema.prisma  store.test.ts  store.ts  tsconfig.json  vercel.json  vitest.config.ts
.github/: copilot-instructions.md
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/actions/: fetchActivity.ts  fetchActivityStreamsData.ts  findPath.ts  syncActivities.ts  syncActivitiesWithStreams.ts  syncSelectedActivityStreams.ts
app/activities/: page.tsx
components/: activity-card.tsx  activity-detail.tsx  activity-grid.tsx  activity-table.tsx  aspect-chart.tsx  conditional-sync-button.tsx  course-card.tsx  course-comparison-column.tsx  elevation-chart.tsx  find-path-button.tsx  footer.tsx  gradient-cdf-chart.tsx  heart-rate-chart.tsx  leaflet-bounds-layer.tsx  leaflet-exploration-layer.tsx  leaflet-geojson-interactive-layer.tsx  leaflet-geojson-layer.tsx  leaflet-map.tsx  leaflet-pathfinding-layer.tsx  leaflet-raster-layer.tsx  location-search.tsx  login-button.tsx  pace-chart.tsx  segment-detail.tsx  strava-attribution.tsx  sync-activities-button.tsx  sync-activities-with-streams-button.tsx  sync-routes-button.tsx  sync-segments-button.tsx  topbar.tsx
hooks/: usePathfinder.ts  useSyncAction.ts  useUrlState.ts
lib/: dem-cache.test.ts  dem-cache.ts  logger.ts  pathfinder-wasm.ts  utils.test.ts  utils.ts
pathfinder/: Cargo.toml
pathfinder/src/: azimuth.rs  console_log.rs  find_path.rs  geotiff.rs  lib.rs  raster.rs
types/: transformers.ts
workers/: pathfinder.worker.ts
(+19 files in other folders)
