[package]
edition = "2021"
name = "pathfinder"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
georaster = "0.2.0"
geo-types = "0.4.3"
geojson = "0.24.1"
js-sys = "0.3"
pathfinding = "4.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
serde-wasm-bindgen = "0.6"
tiff = "0.9.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
lto = true
strip = "symbols"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
